Fixed window overflow
Fixed that canvas was causing scroll bars to appear in the browser. Not entirely sure why this started happening, will look into it in the future.

--- a/main.css
+++ b/main.css
@@ -12,6 +12,8 @@ body * {
 #game-container {
     display: flex;
     flex-direction: row;
+    /* TODO: This never used to be necessary, why is it now? */
+    overflow: hidden;
 
     background-color: black;
 
